app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;
@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");

html {
  /* overflow: hidden; */
  height: 100%;
}

body {
  overflow: auto;
  height: 100%;
  font-family: "Open Sans", sans-serif;
}

.transition-opacity {
  transition: opacity 0.3s ease-in-out;
}

.transition-transform {
  transition: transform 0.3s ease-in-out;
}

/* It makes the HTML progress bar filling smooth when value change. */
progress::-webkit-progress-value {
  transition: 0.6s width ease-out;
}

@layer base {
  .btn-gradient {
    @apply !bg-gradient !bg-[length:300%_300%] hover:saturate-[1.2] shadow duration-100 !border-0 !border-transparent !bg-transparent animate-shimmer disabled:!bg-none disabled:!bg-gray-500/30  !text-white;
  }
  .btn {
    @apply !capitalize;
  }
}

